# adv-chunking

./: doctors.db  main.py  main_recovery.py  pyproject.toml
models/: request_response.py
routers/: career_center_router.py  chunk_router.py  deep_research_router.py
routers/healthcare_assistant/: doctors.py  healthcare_router.py  ocr_test.py  patient.py  test.py
utils/: __init__.py  database.py  summary.txt
utils/chunking/: AgenticChunker.py  AgenticChunker2.py  SlidingWindowSplitter.py
