[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-experimental<=0.0.52",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "nltk>=3.9.2",
    "openai>=2.5.0",
    "openai-agents>=0.4.2",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "semantic-text-splitter>=0.28.0",
    "sendgrid>=6.12.5",
    "uvicorn>=0.38.0",
]
